<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RevLang</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="themes">Thèmes</string>
    <string name="mots">Mots</string>
    <string name="verbes">Verbes</string>
    <string name="formes">Formes verbales</string>
    <string name="revision">Révision</string>
    <string name="parametrage">Paramétrage</string>
    <string name="quitter">Quitter</string>
    <string name="Italien">Italien</string>
    <string name="Anglais">Anglais</string>
    <string name="titre_langue">Choisissez votre langue</string>
    <string name="title_activity_theme">Thèmes</string>
    <string name="title_activity_mots">Mots</string>
    <string name="title_activity_verbes">Verbes</string>
    <string name="title_activity_formes">Formes</string>
    <string name="title_activity_revision">Révision</string>
    <string name="title_activity_parametrage">Paramétrage</string>
    <string name="title_activity_main">RevLangues</string>
    <string name="title_activity_themes">ThemesActivity</string>
    <string name="erreurChoixLangue">Cliquez sur un drapeau pour choisir la langue.</string>
    <string name="title_activity_service_test">ServiceTest</string>
    <string name="ligne1Question">Verbe ou thème</string>
    <string name="ligne2Question">Mot ou forme</string>
    <string name="inviteReponse">Votre réponse :</string>
    <string name="texteReponse">Texte de la réponse</string>
    <string name="bravoOuEchec">Bravo ou échec</string>
    <string name="boutonVeriferAutre">Autre question</string>
    <string name="Vocabulaire">Vocabulaire</string>
    <string name="Conjugaisons">Conjugaisons</string>
    <string name="invitePoidsMin">Poids minimum</string>
    <string name="inviteAgeMin">Non révisés depuis</string>
    <string name="inviteErrMin">Avec plus de</string>
    <string name="jours">jours</string>
    <string name="erreurs">erreur(s)</string>
    <string name="conserveStats">Conserver les stats en quittant</string>
    <string name="preparerListe">Préparer la liste</string>
    <string name="inviteRestrictionThemes">Restreindre la liste aux thèmes sélectionnés</string>
    <string name="inviteRestrictionVerbes">Restreindre la liste aux verbes sélectionnés</string>
    <string name="l_id">Id</string>
    <string name="l_theme_id">Thème</string>
    <string name="l_langue_id">Code langue</string>
    <string name="l_francais">En français</string>
    <string name="l_directeur">Mot directeur</string>
    <string name="l_prononciation">Prononciation</string>
    <string name="l_date_rev">Date de révision</string>
    <string name="l_poids">Poids</string>
    <string name="l_nberr">Nb erreurs</string>
    <string name="l_dist_id">Id distant</string>
    <string name="l_date_maj">Date mise-à-jour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mot">MotActivity</string>
    <string name="title_activity_forme">FormeActivity</string>
    <string name="l_verbe_id">Verbe</string>
    <string name="l_forme_id">Forme</string>

</resources>
