<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fr.marzin.jacques.revlangues.ParametrageActivity"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preparerListe"
        android:id="@+id/b_prepareListe"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onPrepareListe" />

    <TableLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2,3"
        android:weightSum="5">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/invitePoidsMin"
                android:id="@+id/invitePoidsMin"
                android:layout_weight="2" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_poidsMin"
                android:editable="false"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:labelFor="@string/invitePoidsMin"
                android:layout_weight="2" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/inviteAgeMin"
                android:id="@+id/InviteAgeMin"
                android:enabled="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_ageMin"
                android:editable="false"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/jours"
                android:id="@+id/textView" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/inviteErrMin"
                android:id="@+id/inviteErrMin" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_errMin"
                android:inputType="number"
                android:editable="false"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/erreurs"
                android:id="@+id/textView2" />

        </TableRow>

    </TableLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conserveStats"
        android:id="@+id/t_conserveStats"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/radio_modeRev">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vocabulaire"
            android:id="@+id/t_vocabulaire"
            android:layout_weight="1"
            android:onClick="onChangeChoix" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Conjugaisons"
            android:id="@+id/t_conjugaisons"
            android:layout_weight="1"
            android:onClick="onChangeChoix" />
    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_themes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/inviteRestrictionThemes"
            android:id="@+id/inviteRestrictionThemes" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l_themes"
            android:choiceMode="multipleChoice"
            android:fastScrollAlwaysVisible="true"
            android:fastScrollEnabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_verbes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/inviteRestrictionVerbes"
            android:id="@+id/inviteRestrictionVerbes" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l_verbes"
            android:choiceMode="multipleChoice"
            android:fastScrollAlwaysVisible="true"
            android:fastScrollEnabled="true" />
    </LinearLayout>

</LinearLayout>
