<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.marzin.jacques.revlangues.RevisionActivity"
    android:orientation="vertical"
    android:clickable="true"
    android:id="@+id/verifierOuAutreQuestion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bravoOuEchec"
        android:id="@+id/bravoOuEchec"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ligne1Question"
        android:id="@+id/ligne1Question"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ligne2Question"
        android:id="@+id/ligne2Question"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2"
        android:id="@+id/zoneQuestion">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/inviteReponse"
                android:id="@+id/inviteReponse"
                style="@style/Base.TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reponse"
                android:inputType="textImeMultiLine"
                style="@style/Base.TextAppearance.AppCompat.Body2" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/texteReponse"
                android:id="@+id/texteReponse"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_marginLeft="10dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonVeriferAutre"
        android:id="@+id/boutonVerifierAutre"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="clickBouton" />

</LinearLayout>
